--- a/0x02-CSS_advanced/styles/8-style.css
+++ b/0x02-CSS_advanced/styles/8-style.css
@@ -7,7 +7,7 @@ body{
     font-family: var(--font-family-base);
     font: var(--font-size-medium);
     font-weight: var(--font-weight-regular);
-    box-sizing: var(--line-height-base);
+    height: var(--line-height-base);
 }
 
 h1,
