--- a/0x03-sass_scss/2-color_variables.scss
+++ b/0x03-sass_scss/2-color_variables.scss
@@ -5,8 +5,13 @@ $background: #6D6D6D;
 
 body {
      color: $textColor;
+     background-color: $background;
 }
 
 p {
   background-color: $background;
+}
+
+h2{
+	background-color: #background;
 }
