added two varibles

--- a/0x03-sass_scss/2-color_variables.scss
+++ b/0x03-sass_scss/2-color_variables.scss
@@ -9,9 +9,9 @@ body {
 }
 
 p {
-  background-color: $background;
+  color: $textColor;
 }
 
-h2{
-	background-color: #background;
+h2 {
+   background-color: #background;
 }
