--- a/0x03-sass_scss/8-mixin_margins.scss
+++ b/0x03-sass_scss/8-mixin_margins.scss
@@ -1,14 +1,14 @@
 /* magin mixin */
 
-@mixin marginmix($px){
+@mixin marginmix($px) {
        margin-left: $px;
        margin-right: $px;
 }
 
 body {
-     @include maginmix(10px);
+     @include marginmix(10px);
 }
 
 div {
-     @include maginmix(15px);
+    @include marginmix(15px);
 }
