added extended classes

--- a/0x03-sass_scss/9-extend_list.scss
+++ b/0x03-sass_scss/9-extend_list.scss
@@ -1,12 +1,12 @@
 /* Extended  */
 
-.info, .success, .warning {
+.info {
   font-size: 12px; }
 
 .success {
-	 @extend .info
+  @extend .info;
   color: #00FF00; }
 
 .warning {
-	 @extend .info
+   @extend .info;
   color: #FF0000; }
