--- a/0x03-sass_scss/12-loop_header.scss
+++ b/0x03-sass_scss/12-loop_header.scss
@@ -1,7 +1,7 @@
 /* loop headers creating h1 to h5 with font size*/
 
 @for $i from 1 through 5 {
-     h#{$1}{
+     h#{$i} {
 	font-size: #{$i}px;
 	}
 }
