--- a/0x04-flexbox/2-styles.css
+++ b/0x04-flexbox/2-styles.css
@@ -373,7 +373,9 @@
     padding: 10rem 40rem 2rem 0;
   }
 
-/* Section BLOG ============================= */
+/* Section BLOG
+   ============================= */
+
 .section-blog > .row {
     flex-direction: row-reverse;
 }
