--- a/0x04-flexbox/2-styles.css
+++ b/0x04-flexbox/2-styles.css
@@ -376,7 +376,7 @@
   /* Section BLOG
    ============================= */
 
-  .section-blog > .row {
+  .section-blog .row {
     flex-direction: row-reverse;
 }
   
