--- a/0x04-flexbox/3-styles.css
+++ b/0x04-flexbox/3-styles.css
@@ -180,17 +180,16 @@
   
   /* Grid
       ============================= */
-
-.row {
+  .row{
     display: flex;
-}
+  }
 
-  
   ul.row {
     margin: 0;
     padding: 0;
     list-style: none;
   }
+  
   
   [class*='col-'] {
     padding: 0.5rem;
@@ -373,12 +372,16 @@
     padding: 10rem 40rem 2rem 0;
   }
 
-  /* Section BLOG
-   ============================= */
 
-  .section-blog .row {
+  /* Section BLOG ============================= */
+   .section-blog .row{
     flex-direction: row-reverse;
 }
+
+ /* Section SERVICES ============================= */
+ .section-services .row {
+   flex-wrap: wrap;
+ }
   
   /*** 4. CARD ***/
   
@@ -507,4 +510,3 @@
     font-size: 10rem;
     z-index: -1;
   }
-    
