--- a/0x04-flexbox/6-styles.css
+++ b/0x04-flexbox/6-styles.css
@@ -218,7 +218,7 @@
     display: flex;
   }
   
-  .nav > .nav-item + .nav-item {
+  .nav .nav-item + .nav-item {
     margin: var(--nav-item-margin);
 
   }
