--- a/0x04-flexbox/9-styles.css
+++ b/0x04-flexbox/9-styles.css
@@ -398,6 +398,13 @@
  .section-services .row {
    flex-wrap: wrap;
  }
+
+
+ /* Section ABOUT US */
+  .section-about-us [col] {
+    align-self: center;
+  }
+
   
   /*** 4. CARD ***/
   
