--- a/0x04-flexbox/10-styles.css
+++ b/0x04-flexbox/10-styles.css
@@ -218,7 +218,7 @@
     display: flex;
   }
   
-  .nav .nav-item + .nav-item {
+  .nav-item + .nav-item {
     margin: var(--nav-item-margin);
 
   }
@@ -283,7 +283,7 @@
   .header-container {
     display: flex;
     justify-content: space-between;
-
+    align-items: center;
   }
   
   /* Footer
@@ -374,8 +374,28 @@
     background-repeat: no-repeat;
     background-size: 90rem auto;
     background-color: #010101;
+
+    position: relative;
+    margin-top: -8.5rem;
+
+  }
+
+  .section-hero .section-body {
+    padding: 10rem 4rem;
+  }
+
+  .section-hero .section-category{
+    color: var(--color-white);
+    text-transform: uppercase;
   }
   
+  .hero-homepage {
+    background-position: 75% 0;
+    background-repeat: no-repeat;
+    background-size: 90rem auto;
+    background-color: #010101;
+  }
+
   .section-hero .section-title {
     margin-bottom: 5rem;
   }
@@ -399,13 +419,11 @@
    flex-wrap: wrap;
  }
 
-
  /* Section ABOUT US */
-  .section-about-us > [class^="col"] {
+  .section-about-us .col {
     align-self: center;
   }
 
-  
   /*** 4. CARD ***/
   
   /* Card (all styles)
