--- a/0x04-flexbox/12-styles.css
+++ b/0x04-flexbox/12-styles.css
@@ -552,8 +552,6 @@
     z-index: -1;
   }
 
-
-
   /*** ARTICLE PAGE ***/
 /* Section HERO (article)
     ============================= */
@@ -586,3 +584,18 @@
       z-index: 2;
     }
 
+    .main-article{
+      padding: 5rem 0;
+    }
+    /* Post
+    ============================= */
+    .post{
+      display: flex;
+    }
+    .post-content{
+      width: 100%;
+    }
+    .post-aside{
+      order: -1;
+      min-width: 20%;
+    } 
