--- a/0x04-flexbox/9-styles.css
+++ b/0x04-flexbox/9-styles.css
@@ -401,7 +401,7 @@
 
 
  /* Section ABOUT US */
-  .section-about-us > [class^="col"] {
+  .section-about-us > [class*='col'] {
     align-self: center;
   }
 
