--- a/0x05-form/03-styles.css
+++ b/0x05-form/03-styles.css
@@ -682,3 +682,15 @@ ul.row {
       border: none;
       padding: 0 0 2rem;
     }
+
+
+
+
+
+    label{
+      cursor: pointer;
+      display: block;
+      font-size: 1.4rem;
+      padding: 0 0 .5rem;
+      white-space: nowrap;
+    }
