--- a/0x06-responsive_design/02-1-styles.css
+++ b/0x06-responsive_design/02-1-styles.css
@@ -168,6 +168,11 @@
   
   /* Helpers
       ============================= */
+
+      main > img{
+        width: 100%;
+        height: auto;
+      }
   
   .visually-hidden:not(:focus):not(:active) {
     position: absolute !important;
@@ -191,7 +196,7 @@
   
   /* Grid
       ============================= */
-  
+
   ul.row {
     margin: -1rem;
     padding: 0;
@@ -213,6 +218,27 @@
   .col-1-2 {
     width: calc((100% / 2) - 2rem);
   }
+
+
+  @media (max-width: 767px){
+    :root{
+    --section-padding: 5rem 1.5rem;
+    --section-body-padding: 2rem 0 0;
+    }
+      .ul.row .row{
+          flex-direction: column;
+          margin: 0;
+        }
+
+        [class^='col-']{
+          margin: 0 0 3rem 0;
+        }
+
+        .col-1-3 .col-1-2{
+          width: 100%;
+        }
+  }
+
   
   /* Navbar
       ============================= */
@@ -262,7 +288,12 @@
     background-color: var(--color-primary);
     width: 100%;
   }
-  
+
+  @media (max-width: 767px) {
+  .navbar-menu{
+    display: none;
+   }
+}
   /* Header
       ============================= */
   
@@ -400,7 +431,12 @@
   .section-blog .row {
     flex-direction: row-reverse;
   }
-  
+
+  @media (max-width: 767px) {
+    .section-blog .row{
+      flex-direction: column;
+    }
+  }
   /* Section SERVICES
       ============================= */
   
