--- a/0x06-responsive_design/05-styles.css
+++ b/0x06-responsive_design/05-styles.css
@@ -300,12 +300,48 @@
    }
 }
 
+
 .header .nav {
   flex-direction: column;
   overflow: hidden;
   max-height: 0;
   transition: max-height .2s ease-out;
 }
+
+
+.header .menu-icon{
+  cursor: pointer;
+  padding: 2.5rem;
+  position: relative;
+  user-select: none;
+}
+
+.header .menu-icon .navicon{
+  display: block;
+  width: 2rem;
+  height: .2rem;
+  position: relative;
+  transition: background .2s ease-out;
+}
+
+.header .menu-icon .navicon:before + .navicon:after{
+  content: " ";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: var(--color-white);
+  transition: all .2s ease-out;
+}
+
+.header .menu-icon .navicon:before{
+  top: .7rem;
+}
+
+.header .menu-icon .navicon:before{
+  top: -.7rem;
+}
+
 
   /* Header
       ============================= */
