--- a/0x06-responsive_design/02-1-styles.css
+++ b/0x06-responsive_design/02-1-styles.css
@@ -234,7 +234,7 @@
       margin: 0;
     }
 
-    .col-1-3 .col-1-2 {
+    .col-1-3, .col-1-2 {
       width: 100%;
     }
   }
@@ -288,10 +288,12 @@
     width: 100%;
   }
 
+  @media only screen and (max-width: 767px){
   .navbar-menu{
     display: none;
   }
-  
+}
+
   /* Header
       ============================= */
   
